Make small changes to Relic Page, add link card to Unit Page on Matrix Page

--- a/src/app/healing-calculator/healing-calculator.component.scss
+++ b/src/app/healing-calculator/healing-calculator.component.scss
@@ -82,7 +82,7 @@
                         
                         .name, .description {
                             font-style: italic;
-                            text-transform: capitalize;
+                            // text-transform: capitalize; wtf is this for? maybe lazy copy paste
                             
                             p {
                                 margin: unset;
