--- a/src/app/relic-page/relic-page.component.scss
+++ b/src/app/relic-page/relic-page.component.scss
@@ -76,7 +76,7 @@
                         line-height: 24px;
                     }
 
-                    .relic-weapon-name {
+                    .relic-tag {
                         color: #F5F5F5;
                         font-size: 20px;
                         font-weight: 300;
