--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1045,7 +1045,7 @@
                                 text-align: left;
                                 width: 100%;
                                 padding: 0 0 8px 0;
-                                border-bottom: 1px solid #6A6666;
+                                border-bottom: 1px solid $border;
                             }
                         }
                     }
