--- a/src/app/relic-page/relic-page.component.html
+++ b/src/app/relic-page/relic-page.component.html
@@ -1,4 +1,4 @@
-<section class="main" *ngIf="relic">
+<section class="main" [attr.data-relic]="relic.slug" *ngIf="relic">
   <div class="header-element">
     <div class="header-splash" 
       style="background-image: url(&quot;../assets/backgrounds/relic_page_background.webp&quot;);">
@@ -12,8 +12,8 @@
           <div class="relic-name">
             <span>{{relic?.name}}</span>
           </div>
-          <div class="relic-weapon-name">
-            <span>{{relic?.tag}}</span>
+          <div class="relic-tag">
+            <span>{{relic?.tag?.charAt(0).toUpperCase() + relic?.tag?.slice(1)}}</span>
           </div>
         </div>
       </div>
