--- a/src/app/unit-page/unit-page.component.scss
+++ b/src/app/unit-page/unit-page.component.scss
@@ -578,7 +578,7 @@
                         flex-direction: column;
                         align-items: unset;
                         gap: 16px;
-                        border-bottom: 1px solid #6A6666;
+                        border-bottom: 1px solid $border;
                         padding: 0 0 20px;
 
                         .advancements-star-column {
