Update to matrix data and matrix page

--- a/src/app/matrices-index/matrices-index.component.html
+++ b/src/app/matrices-index/matrices-index.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="type">
-      <h5 class="title">Type</h5>
+      <h5 class="title">Resonance</h5>
       <div class="wrapper">
         <img src="../assets/elements/attack.png" alt="DPS Type" data-type="damage">
         <img src="../assets/elements/benediction.png" alt="Benediction Type" data-type="benediction">
@@ -28,14 +28,15 @@
       </div>
     </div>
     <div class="role">
-      <h5 class="title">Role</h5>
+      <h5 class="title">Buffs</h5>
       <div class="wrapper">
-        <img src="../assets/effects/buff_mdps.png" alt="DPS Role" data-role="MDPS">
-        <img src="../assets/effects/buff_buffer.png" alt="Buffer DPS Role" data-role="Buffer">
-        <img src="../assets/effects/buff_healer.png" alt="Healer Role" data-role="Healer">
-        <img src="../assets/effects/buff_supportbuffer.png" alt="Support Buffer Role" data-role="Support Buffer">
-        <img src="../assets/effects/buff_shatter.png" alt="Shatter Role" data-role="Shatter">
-        <img src="../assets/effects/buff_taunt.png" alt="Taunt Role" data-role="Taunt">
+        <img matTooltip="ATK %" src="../assets/effects/buff_atk.png" alt="ATK" data-role="ATK %">
+        <img matTooltip="Final Damage %" src="../assets/effects/buff_finaldamage.png" alt="Final Damage" data-role="Final Damage %">
+        <img matTooltip="Elemental Damage %" src="../assets/effects/buff_elementaldamage.png" alt="Elemental Damage" data-role="Elemental Damage %">
+        <img matTooltip="Damage %" src="../assets/effects/buff_damage.png" alt="Healer Role" data-role="Damage %">
+        <img matTooltip="Crit Damage %" src="../assets/effects/buff_critdamage.png" alt="Crit Damage" data-role="Crit Damage %">
+        <img matTooltip="Shatter %" src="../assets/effects/buff_shatterpercent.png" alt="Shatter" data-role="shatter">
+
       </div>
     </div>
   </div>
