--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -300,7 +300,7 @@
     </div>
     <!-- Matrices-->
     <div class="matrix-part">
-      <div class="attack-wrap" *ngIf="matrix['twopc'] && matrix['twopc'].effect">
+      <div class="attack-wrap" >
         <!-- Display 2pc effect -->
         <div *ngIf="matrix['twopc'] && matrix['twopc'].effect">
           <div class="attack-heading-wrap">
