--- a/src/app/units-index/units-index.component.html
+++ b/src/app/units-index/units-index.component.html
@@ -35,12 +35,12 @@
       <h5 class="title">Role</h5>
       <div class="wrapper">
         <!-- THE DATA-ROLES ARE NOT CASE-CONSISTENT WITH THE OTHER DATA-X ATTRIBUTES -->
-        <img src="../assets/effects/buff_mdps.png" alt="DPS Role" data-role="MDPS">
-        <img src="../assets/effects/buff_buffer.png" alt="Buffer DPS Role" data-role="Buffer">
-        <img src="../assets/effects/buff_healer.png" alt="Healer Role" data-role="Healer">
-        <img src="../assets/effects/buff_supportbuffer.png" alt="Support Buffer Role" data-role="Support Buffer">
-        <img src="../assets/effects/buff_shatter.png" alt="Shatter Role" data-role="Shatter">
-        <img src="../assets/effects/buff_taunt.png" alt="Taunt Role" data-role="Taunt">
+        <img matTooltip="MDPS" src="../assets/effects/buff_mdps.png" alt="DPS Role" data-role="MDPS">
+        <img matTooltip="Buffer" src="../assets/effects/buff_buffer.png" alt="Buffer DPS Role" data-role="Buffer">
+        <img matTooltip="Healer" src="../assets/effects/buff_healer.png" alt="Healer Role" data-role="Healer">
+        <img matTooltip="Support Buffer" src="../assets/effects/buff_supportbuffer.png" alt="Support Buffer Role" data-role="Support Buffer">
+        <img matTooltip="Shatter" src="../assets/effects/buff_shatter.png" alt="Shatter Role" data-role="Shatter">
+        <img matTooltip="Taunt" src="../assets/effects/buff_taunt.png" alt="Taunt Role" data-role="Taunt">
       </div>
     </div>
   </div>
