--- a/src/app/healing/healing.component.html
+++ b/src/app/healing/healing.component.html
@@ -4,7 +4,8 @@
       <h3 class="title">Healing</h3>
       <h4 class="subtitle">Overview</h4>
     </div>
-    <p class="description">This section of the project is dedicated to Katherine Isley's so-called "Healing Guide". What started out as a humble Excel tabl- someone else finish the rest. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit.</p>
+    <p class="description">This section of the project is dedicated to Katherine Isley's so-called "Healing Guide". What started out as a humble Excel table has evolved into an entire guidebook, coupled together with recommended competitive teams from veterans and our Healing Calculator.
+    </p>
   </div>
   <div class="entries">
     <div class="entry" routerLink="/healing/guide">
@@ -12,7 +13,7 @@
         <img class="card-img-top" src="assets/backgrounds/overview_background1.webp" alt="Card image top">
         <div class="card-body">
           <h5 class="card-title">Healing Guide</h5>
-          <p class="card-text">A guide curated by the best European support players, such as Katherine Isley, Ren, and Lycrus, Kath's Healing Guide is an elaborate, beginner-friendly textbook for both new and old players, regardless of whether you lack experience or are a hardened veteran.</p>
+          <p class="card-text">A guide curated by the best European support players, such as Katherine Isley, Ren, and Lycrus. Kath's Healing Guide is an elaborate, beginner-friendly textbook for both new and old players, regardless of whether you lack experience or are a hardened veteran.</p>
         </div>
       </div>
     </div>
