--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -4,6 +4,7 @@
       <h3 class="title">Index</h3>
       <h4 class="subtitle">Overview</h4>
     </div>
+    <p class="description">Here, you will find compiled indexes covering every major part of the game, from simulacra to matrices to relics, all in one central place bundled with tips and more. We will also be adding more indexes to cover Smart Servants and other aspects of the game in the future.</p>
   </div>
   <div class="entries">
     <div class="entry" routerLink="/index/units-index">
