--- a/src/app/about-us-card/about-us-card.component.html
+++ b/src/app/about-us-card/about-us-card.component.html
@@ -19,12 +19,12 @@
       </svg>
     </div>
     <div class="info">
-      <h5 class="name" [style.color]="card.color1">{{card.name}}</h5>
-      <h6 class="discord">{{card.discord}}</h6>
-      <h6 class="title">{{card.title}}</h6>
+      <h5 *ngIf="card.name" class="name" [style.color]="card.color1">{{card.name}}</h5>
+      <h6 *ngIf="card.discord" class="discord">{{card.discord}}</h6>
+      <h6 *ngIf="card.title" class="title">{{card.title}}</h6>
     </div>
   </div>
-  <p class="quote">{{card.quote}}</p>
+  <p *ngIf="card.quote" class="quote">{{card.quote}}</p>
   <div class="socials">
     <a *ngFor="let link of card.links" [href]="link.url" target="_blank" class="social-link">
       <img src="assets/socials/{{link.icon}}.svg" [alt]="link.alt" class="icon">
